Started VueJs files Fixed problems with cors policy Api.yaml
