# service/api/api-handler.go
@@ -17,8 +17,8 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/profile/:id", rt.GetBasicProfile)
 	rt.router.PUT("/profile/:id", rt.AddFollowerProfile)
 	rt.router.DELETE("/profile/:id", rt.UnFollowerProfile)
-	rt.router.POST("/profile/:id/ban", rt.BanFollowerProfile)
-	rt.router.DELETE("/profile/:id/ban", rt.UnBanFollowerProfile)
+	rt.router.POST("/ban/:id", rt.BanFollowerProfile)
+	rt.router.DELETE("/ban/:id", rt.UnBanFollowerProfile)
 	rt.router.GET("/profile/:id/ultra", rt.GetUltraBasicProfile)
 	rt.router.GET("/profile/:id/image/:imageid", rt.GetProfileImageInfo)
 	rt.router.DELETE("/profile/:id/image/:imageid", rt.DeletePhotoProfile)
